--- a/theme/admin/rsrc/css/import/_styles.scss
+++ b/theme/admin/rsrc/css/import/_styles.scss
@@ -639,7 +639,7 @@ img {
 input, select, textarea {
 	width: 100%;
 	background: $backgroundColorEmphasize;
-	color: $formElementTextColor;
+	color: $textColorLight;
 	font-family: inherit;
 	font-size: 0.7rem;
 	padding: 0.25rem;
