Bugfix: Add CSS "word-break" property

--- a/theme/admin/rsrc/css/import/_styles.scss
+++ b/theme/admin/rsrc/css/import/_styles.scss
@@ -65,6 +65,7 @@ html {
 	color: $textColor;
 	background: $htmlBackgroundColor;
 	-webkit-hyphens: auto;
+	word-break: break-word;
 	hyphens: auto;
 }
 
