Do some minor optimizations on the admin theme
* Add noisy background images
* Rename SCSS/CSS file "main" to "bright"
* Remove uppercase text-transform for headings
* Replace hardcoded font sizes with SCSS variables
* Decrease font size for category link in post item template
* Move right-floated ID before the heading in the HTML markup to ensure
  it does not moves to the second line if the heading text is too wide.

--- a/theme/admin/rsrc/css/bright.scss
+++ b/theme/admin/rsrc/css/bright.scss
@@ -1,7 +1,7 @@
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 # Content background and border color
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-$htmlBackgroundColor: #DDD;
+$htmlBackground: url("../img/noise-bright.png") #DDD;
 $backgroundColor: #FFF;
 $backgroundColorEmphasize: #EEE;
 $borderColor: #AAA;
