--- a/theme/admin/rsrc/css/dark.scss
+++ b/theme/admin/rsrc/css/dark.scss
@@ -1,7 +1,7 @@
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 # Content background and border color
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-$htmlBackgroundColor: #4D535B;
+$htmlBackground: url("../img/noise-dark.png") #3D434B;
 $backgroundColorEmphasize: #32373E;
 $backgroundColor: #3D434B;
 $borderColor: #1D232B;
