--- a/theme/admin/rsrc/css/import/_styles.scss
+++ b/theme/admin/rsrc/css/import/_styles.scss
@@ -28,7 +28,6 @@ a {
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 h1, h2, h3 {
 	margin-bottom: 0;
-	text-transform: uppercase;
 
 	+p {
 		margin-top: 0;
@@ -63,7 +62,7 @@ html, body {
 html {
 	font-size: 1.25rem;
 	color: $textColor;
-	background: $htmlBackgroundColor;
+	background: $htmlBackground;
 	-webkit-hyphens: auto;
 	word-break: break-word;
 	hyphens: auto;
@@ -432,7 +431,7 @@ img {
 	&-id {
 		float: right;
 		color: $textColorLight;
-		font-size: 0.7rem;
+		font-size: $fontSize;
 		font-weight: normal;
 	}
 
@@ -441,15 +440,16 @@ img {
 		padding: 0;
 		list-style: none;
 
-		&-right {
-			float: right;
-		}
-
 		li {
 			display: inline-block;
 
 			+li:before {
 				content: " – ";
+			}
+
+			&.item-meta-right {
+				float: right;
+				font-size: $fontSizeSmall;
 			}
 
 			&.item-meta-right:before {
@@ -640,7 +640,7 @@ input, select, textarea {
 	background: $backgroundColorEmphasize;
 	color: $textColorLight;
 	font-family: inherit;
-	font-size: 0.7rem;
+	font-size: $fontSize;
 	padding: 0.25rem;
 	border: 0.05rem solid $borderColor;
 	box-sizing: border-box;
