Show action button list in entity update template
Add a link to the current entity on the website and a link to the entity
delete form in the administration area's update.php templates.

--- a/theme/admin/rsrc/css/dark.css
+++ b/theme/admin/rsrc/css/dark.css
@@ -497,6 +497,7 @@ img {
 # Grids
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 .form-grid {
+  clear: both;
   display: grid;
   grid-template-columns: repeat(2, 7.5rem minmax(0, 1fr));
   border-left: 0.05rem solid #1D232B;
