--- a/theme/admin/rsrc/css/import/_styles.scss
+++ b/theme/admin/rsrc/css/import/_styles.scss
@@ -723,6 +723,7 @@ label {
 	font-size: $fontSizeSmall;
 
 	&-wrapper {
+		clear: both;
 		margin-bottom: 0.5rem;
 		border: 0.1rem solid darken($messageListBackgroundColor, 10%);
 	}
