--- a/theme/admin/rsrc/css/bright.scss
+++ b/theme/admin/rsrc/css/bright.scss
@@ -52,6 +52,13 @@ $messageListTextColor: #EEE;
 $messageListBackgroundColor: #C45C66;
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Scrollbars
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+$scrollbarColor: #A1A1A1;
+$scrollbarHoverColor: #888888;
+$scrollbarBackground: #E1E1E1;
+
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 # Import stylesheet
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 @import "import/styles";
