--- a/theme/admin/rsrc/css/dark.css
+++ b/theme/admin/rsrc/css/dark.css
@@ -21,6 +21,9 @@
 # Information message box
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Scrollbars
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 # Import stylesheet
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
@@ -47,6 +50,32 @@
 ::selection {
   background: #BBB;
   color: #000;
+}
+
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Scrollbars
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+* {
+  scrollbar-color: #838994 #2E3440;
+}
+*::-webkit-scrollbar {
+  width: 0.75rem;
+}
+*::-webkit-scrollbar-track {
+  background: #2E3440;
+}
+*::-webkit-scrollbar-thumb {
+  background: #838994;
+  background-clip: padding-box;
+  border: 0.15rem solid transparent;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background: #4C566A;
+  background-clip: padding-box;
+  border: 0.15rem solid transparent;
+}
+*::-webkit-scrollbar-corner {
+  background: transparent;
 }
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
@@ -624,6 +653,7 @@ textarea {
   padding: 0.5rem;
   -webkit-hyphens: none;
   hyphens: none;
+  cursor: auto;
 }
 
 input[type=submit] {
