Explicitly set placeholder color for admin theme
Explicitly set the placeholder color and opacity for the form fields of
the admin theme as the various browsers are using different defaults.

--- a/theme/admin/rsrc/css/bright.css
+++ b/theme/admin/rsrc/css/bright.css
@@ -53,6 +53,14 @@
 }
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Placeholders
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+::placeholder {
+  color: #444;
+  opacity: 0.5;
+}
+
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 # Scrollbars
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 * {
