--- a/theme/admin/rsrc/css/import/_styles.scss
+++ b/theme/admin/rsrc/css/import/_styles.scss
@@ -59,6 +59,10 @@ a {
 	color: $linkColor;
 	text-decoration: none;
 
+	&:hover {
+		text-decoration: underline;
+	}
+
 	&:focus {
 		background: $linkColorFocused;
 	}
@@ -348,9 +352,10 @@ body {
 	}
 
 	a {
-	   color: inherit;
-	   display: block;
-	   padding: 0 0.25rem;
+		color: inherit;
+		display: block;
+		padding: 0 0.25rem;
+		text-decoration: none;
    }
 }
 
